--- a/_config.yml
+++ b/_config.yml
@@ -13,15 +13,14 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Hitchens
-email: hello@patdryburgh.com
+title: Abigail Griffin
+email: agriffin@middlebury.edu
 description: >- # this means to ignore newlines until "baseurl:"
-  An inarguably well-designed Jekyll theme.
+  Hello and welcome to my personal webpage!
 baseurl: "/hitchens" # the subpath of your site, e.g. /blog
-url: "https://patdryburgh.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-icon: /assets/images/icon-512.png
-twitter_username: patdryburgh
-github_username:  patdryburgh
+url: "https://abbygriffin4.github.io/personal" # the base hostname & protocol for your site, e.g. http://example.com
+icon: /assets/images/AbigailGriffinProfilecopy
+github_username:  abbygriffin4
 
 # Build settings
 markdown: kramdown
